typescript/checker/tests/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity1.ts.stderr
error: UndefinedSymbol {
    sym: Atom('A' type=inline),
    span: Span {
        lo: BytePos(
            9,
        ),
        hi: BytePos(
            10,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity1.ts:1:10
  |
1 | new Date<A;
  |          ^

